# research-monorepo

./: .pre-commit-config.yaml  README.md  pyproject.toml
experiments/01_nanogpt_base/: 01_pretraining.py  README.md
experiments/02_nanogpt_push_record/: README.md
src/research_lib/_manual_ops/: README.md
src/research_lib/architectures/: config.py  modded_nanogpt_base.py
src/research_lib/architectures/tests/: test_modded_nanogpt_base.py
src/research_lib/layers/: activations.py  attention.py  embeddings.py  feed_forward.py  logit_clipping.py
src/research_lib/layers/attention/: __init__.py  rotatory_mha.py
src/research_lib/layers/attention/tests/: test_rotary_mha.py
src/research_lib/optimizers/: __init__.py  cautious_adamw.py  dist_adam.py  nor_muon.py
src/research_lib/optimizers/tests/: test_cautious_adam.py  test_nor_muon.py
src/research_lib/training/: __init__.py  configs.py  param_utils.py  scheduling.py
src/research_lib/training/modules/: __init__.py  dual_optimizer.py
src/research_lib/training/tests/: __init__.py  test_configs.py  test_dual_optimizer_module.py  test_param_utils.py  test_scheduling.py
src/research_lib/utils/: secrets.py
