[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_monorepo"
version = "0.1.0"
authors = [{ name = "Loo Jun Zing", email = "jzloo11111@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    # Core DL
    "torch>=2.1.0",

    # Pytorch native external dependencies
    "rotary-embedding-torch",

    # Hugging Face Ecosystem
    "huggingface_hub",
    "transformers",
    "diffusers",
    "timm",
    "accelerate",
    "tokenizers",
    "datasets",
    "peft",
    "evaluate",
    "trl",

    # Pytorch lightning (trainer) and ecosystem
    "lightning",

    # Model Optimization
    "bitsandbytes",
    "einops",
    "triton",
    # "flash-attn", # Commented out: Install manually to ensure CUDA compatibility

    # Infrastructure & Config
    "wandb",
    "omegaconf",
    "hydra-core",

    # Utilities
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "pytest",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "ruff",
]
flash-attn = [
    "flash-attn>=2.5.0"
]
unsloth = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"
]
# MUST install with --no-build-isolation tag
xformers = [
  "ninja",  # optional but recommended
  "xformers == 0.0.33.post2"
]

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
